c4prj2_input/grade.txt
Grading at Tue Mar  9 08:55:39 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:20:16: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
      fc->decks = &hand;
                ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
